--- a/aboutapp.lfm
+++ b/aboutapp.lfm
@@ -1,7 +1,7 @@
 object AppInfo: TAppInfo
-  Left = 372
+  Left = 517
   Height = 340
-  Top = 318
+  Top = 309
   Width = 267
   Caption = 'О программе'
   ClientHeight = 340
@@ -14,22 +14,43 @@ object AppInfo: TAppInfo
   OnClose = FormClose
   LCLVersion = '1.2.4.0'
   object Developer_txt: TLabel
-    Left = 40
+    Left = 48
     Height = 20
     Top = 96
-    Width = 188
-    Caption = 'Разработчик: Вадим Кирпа'
+    Width = 168
+    Caption = 'Разработчик: Кирпа В.Д.'
     Font.Height = -15
     ParentColor = False
     ParentFont = False
   end
   object Close_btn: TButton
-    Left = 88
+    Left = 92
     Height = 25
-    Top = 224
+    Top = 288
     Width = 75
     Caption = 'Закрыть'
     OnClick = Close_btnClick
     TabOrder = 0
+  end
+  object Professor_txt: TLabel
+    Left = 32
+    Height = 20
+    Top = 152
+    Width = 196
+    Caption = 'Преподаватель: Кленин А.С.'
+    Font.Height = -15
+    ParentColor = False
+    ParentFont = False
+    OnClick = Professor_txtClick
+  end
+  object Year_txt: TLabel
+    Left = 112
+    Height = 20
+    Top = 248
+    Width = 32
+    Caption = '2015'
+    Font.Height = -15
+    ParentColor = False
+    ParentFont = False
   end
 end
