--- a/listview.lfm
+++ b/listview.lfm
@@ -1,112 +1,125 @@
 object ListForm: TListForm
-  Left = 129
-  Height = 547
-  Top = 397
+  Left = 308
+  Height = 556
+  Top = 254
   Width = 816
-  ClientHeight = 547
+  ClientHeight = 556
   ClientWidth = 816
   OnClose = FormClose
   OnShow = FormShow
   LCLVersion = '1.2.4.0'
-  object DBGrid: TDBGrid
-    AnchorSideLeft.Control = Filter_panel
-    AnchorSideLeft.Side = asrBottom
-    AnchorSideTop.Control = Panel
-    AnchorSideTop.Side = asrBottom
-    AnchorSideRight.Control = Owner
-    AnchorSideRight.Side = asrBottom
-    AnchorSideBottom.Control = Owner
-    AnchorSideBottom.Side = asrBottom
-    Left = 140
-    Height = 447
-    Top = 50
-    Width = 661
-    Anchors = [akTop, akLeft, akRight, akBottom]
-    BorderSpacing.Right = 15
-    BorderSpacing.Bottom = 50
-    Color = clWindow
-    Columns = <>
-    DataSource = DataSource
-    ParentFont = False
-    TabOrder = 0
-    OnTitleClick = DBGridTitleClick
-  end
-  object DBNavigator1: TDBNavigator
-    AnchorSideLeft.Control = Filter_panel
-    AnchorSideLeft.Side = asrBottom
-    AnchorSideRight.Control = Owner
-    AnchorSideRight.Side = asrBottom
-    AnchorSideBottom.Control = Owner
-    AnchorSideBottom.Side = asrBottom
-    Left = 200
-    Height = 25
-    Top = 507
-    Width = 556
-    Anchors = [akLeft, akRight, akBottom]
-    BevelOuter = bvNone
-    BorderSpacing.Left = 60
-    BorderSpacing.Right = 60
-    BorderSpacing.Bottom = 15
-    ChildSizing.EnlargeHorizontal = crsScaleChilds
-    ChildSizing.EnlargeVertical = crsScaleChilds
-    ChildSizing.ShrinkHorizontal = crsScaleChilds
-    ChildSizing.ShrinkVertical = crsScaleChilds
-    ChildSizing.Layout = cclLeftToRightThenTopToBottom
-    ChildSizing.ControlsPerLine = 100
-    ClientHeight = 25
-    ClientWidth = 556
-    DataSource = DataSource
-    Options = []
-    TabOrder = 1
-    VisibleButtons = [nbFirst, nbPrior, nbNext, nbLast]
-  end
-  object Filter_panel: TPanel
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = Panel
-    AnchorSideTop.Side = asrBottom
-    AnchorSideRight.Control = Panel
-    AnchorSideRight.Side = asrBottom
-    AnchorSideBottom.Control = Owner
-    AnchorSideBottom.Side = asrBottom
+  object PairSplitter: TPairSplitter
+    Cursor = crVSplit
     Left = 0
-    Height = 497
-    Top = 50
-    Width = 140
-    Anchors = [akTop, akLeft, akBottom]
-    ClientHeight = 497
-    ClientWidth = 140
-    TabOrder = 2
-    object AddFilter_btn: TButton
-      Left = 8
-      Height = 25
-      Top = 8
-      Width = 115
-      Caption = 'Добавить фильтер'
-      TabOrder = 0
-    end
-  end
-  object Panel: TPanel
-    AnchorSideLeft.Control = Owner
-    AnchorSideTop.Control = Owner
-    AnchorSideRight.Control = Owner
-    AnchorSideRight.Side = asrBottom
-    AnchorSideBottom.Control = DBGrid
-    Left = 0
-    Height = 50
+    Height = 556
     Top = 0
     Width = 816
-    Anchors = [akTop, akLeft, akRight]
-    TabOrder = 3
-  end
-  object Memo1: TMemo
-    Left = 16
-    Height = 394
-    Top = 136
-    Width = 784
-    Lines.Strings = (
-      'Memo1'
-    )
-    TabOrder = 4
+    Align = alClient
+    Position = 350
+    SplitterType = pstVertical
+    object PairSplitterSide1: TPairSplitterSide
+      Cursor = crArrow
+      Left = 0
+      Height = 350
+      Top = 0
+      Width = 816
+      ClientWidth = 816
+      ClientHeight = 350
+      object DBGrid: TDBGrid
+        AnchorSideLeft.Control = PairSplitterSide1
+        AnchorSideTop.Control = DBNavigator1
+        AnchorSideTop.Side = asrBottom
+        AnchorSideRight.Control = PairSplitterSide1
+        AnchorSideRight.Side = asrBottom
+        AnchorSideBottom.Control = PairSplitterSide1
+        AnchorSideBottom.Side = asrBottom
+        Left = 0
+        Height = 321
+        Top = 29
+        Width = 816
+        Anchors = [akTop, akLeft, akRight, akBottom]
+        Color = clWindow
+        Columns = <>
+        DataSource = DataSource
+        Options = [dgEditing, dgTitles, dgIndicator, dgColumnResize, dgColumnMove, dgColLines, dgRowLines, dgTabs, dgAlwaysShowSelection, dgConfirmDelete, dgCancelOnExit, dgThumbTracking]
+        ParentFont = False
+        TabOrder = 0
+        OnTitleClick = DBGridTitleClick
+      end
+      object DBNavigator1: TDBNavigator
+        AnchorSideLeft.Control = PairSplitterSide1
+        AnchorSideTop.Control = PairSplitterSide1
+        Left = 0
+        Height = 29
+        Top = 0
+        Width = 368
+        BevelOuter = bvNone
+        BorderSpacing.Right = 60
+        ChildSizing.EnlargeHorizontal = crsScaleChilds
+        ChildSizing.EnlargeVertical = crsScaleChilds
+        ChildSizing.ShrinkHorizontal = crsScaleChilds
+        ChildSizing.ShrinkVertical = crsScaleChilds
+        ChildSizing.Layout = cclLeftToRightThenTopToBottom
+        ChildSizing.ControlsPerLine = 100
+        ClientHeight = 29
+        ClientWidth = 368
+        DataSource = DataSource
+        Options = []
+        TabOrder = 1
+        VisibleButtons = [nbFirst, nbPrior, nbNext, nbLast]
+      end
+    end
+    object PairSplitterSide2: TPairSplitterSide
+      Cursor = crArrow
+      Left = 0
+      Height = 201
+      Top = 355
+      Width = 816
+      ClientWidth = 816
+      ClientHeight = 201
+      object ScrollBox: TScrollBox
+        Left = 0
+        Height = 201
+        Top = 0
+        Width = 816
+        HorzScrollBar.Page = 428
+        VertScrollBar.Page = 33
+        Align = alClient
+        ClientHeight = 197
+        ClientWidth = 812
+        TabOrder = 0
+        object AddFilter_btn: TButton
+          Left = 8
+          Height = 25
+          Top = 8
+          Width = 122
+          AutoSize = True
+          Caption = 'Добавить фильтр'
+          OnClick = AddFilter_btnClick
+          TabOrder = 0
+        end
+        object DeleteAllFilters_btn: TButton
+          Left = 284
+          Height = 25
+          Top = 8
+          Width = 144
+          AutoSize = True
+          Caption = 'Удалить все фильтры'
+          OnClick = DeleteAllFilters_btnClick
+          TabOrder = 1
+        end
+        object AcceptFilters_btn: TButton
+          Left = 136
+          Height = 25
+          Top = 8
+          Width = 142
+          AutoSize = True
+          Caption = 'Применить фильтры'
+          OnClick = AcceptFilters_btnClick
+          TabOrder = 2
+        end
+      end
+    end
   end
   object SQLQuery: TSQLQuery
     FieldDefs = <>
@@ -117,12 +130,12 @@ object ListForm: TListForm
       'FROM'
     )
     Params = <>
-    left = 80
-    top = 88
+    left = 328
+    top = 64
   end
   object DataSource: TDataSource
     DataSet = SQLQuery
-    left = 144
-    top = 88
+    left = 400
+    top = 64
   end
 end
