Add SQL parametrs

--- a/listview.lfm
+++ b/listview.lfm
@@ -1,42 +1,52 @@
 object ListForm: TListForm
-  Left = 308
-  Height = 556
-  Top = 254
-  Width = 816
-  ClientHeight = 556
-  ClientWidth = 816
+  Left = 571
+  Height = 595
+  Top = 194
+  Width = 849
+  ClientHeight = 595
+  ClientWidth = 849
+  Constraints.MinHeight = 406
+  Constraints.MinWidth = 447
   OnClose = FormClose
+  OnResize = FormResize
   OnShow = FormShow
   LCLVersion = '1.2.4.0'
   object PairSplitter: TPairSplitter
+    AnchorSideLeft.Control = Owner
+    AnchorSideTop.Control = Owner
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    AnchorSideBottom.Control = Owner
+    AnchorSideBottom.Side = asrBottom
     Cursor = crVSplit
     Left = 0
-    Height = 556
+    Height = 595
     Top = 0
-    Width = 816
-    Align = alClient
+    Width = 849
+    Align = alCustom
+    Anchors = [akTop, akLeft, akRight, akBottom]
     Position = 350
     SplitterType = pstVertical
-    object PairSplitterSide1: TPairSplitterSide
+    object PairSplitterTop: TPairSplitterSide
       Cursor = crArrow
       Left = 0
       Height = 350
       Top = 0
-      Width = 816
-      ClientWidth = 816
+      Width = 849
+      ClientWidth = 849
       ClientHeight = 350
       object DBGrid: TDBGrid
-        AnchorSideLeft.Control = PairSplitterSide1
+        AnchorSideLeft.Control = PairSplitterTop
         AnchorSideTop.Control = DBNavigator1
         AnchorSideTop.Side = asrBottom
-        AnchorSideRight.Control = PairSplitterSide1
+        AnchorSideRight.Control = PairSplitterTop
         AnchorSideRight.Side = asrBottom
-        AnchorSideBottom.Control = PairSplitterSide1
+        AnchorSideBottom.Control = PairSplitterTop
         AnchorSideBottom.Side = asrBottom
         Left = 0
         Height = 321
         Top = 29
-        Width = 816
+        Width = 849
         Anchors = [akTop, akLeft, akRight, akBottom]
         Color = clWindow
         Columns = <>
@@ -44,11 +54,12 @@ object ListForm: TListForm
         Options = [dgEditing, dgTitles, dgIndicator, dgColumnResize, dgColumnMove, dgColLines, dgRowLines, dgTabs, dgAlwaysShowSelection, dgConfirmDelete, dgCancelOnExit, dgThumbTracking]
         ParentFont = False
         TabOrder = 0
+        TitleImageList = ImageList
         OnTitleClick = DBGridTitleClick
       end
       object DBNavigator1: TDBNavigator
-        AnchorSideLeft.Control = PairSplitterSide1
-        AnchorSideTop.Control = PairSplitterSide1
+        AnchorSideLeft.Control = PairSplitterTop
+        AnchorSideTop.Control = PairSplitterTop
         Left = 0
         Height = 29
         Top = 0
@@ -69,24 +80,24 @@ object ListForm: TListForm
         VisibleButtons = [nbFirst, nbPrior, nbNext, nbLast]
       end
     end
-    object PairSplitterSide2: TPairSplitterSide
+    object PairSplitterBottom: TPairSplitterSide
       Cursor = crArrow
       Left = 0
-      Height = 201
+      Height = 240
       Top = 355
-      Width = 816
-      ClientWidth = 816
-      ClientHeight = 201
+      Width = 849
+      ClientWidth = 849
+      ClientHeight = 240
       object ScrollBox: TScrollBox
         Left = 0
-        Height = 201
+        Height = 240
         Top = 0
-        Width = 816
+        Width = 849
         HorzScrollBar.Page = 428
         VertScrollBar.Page = 33
         Align = alClient
-        ClientHeight = 197
-        ClientWidth = 812
+        ClientHeight = 236
+        ClientWidth = 845
         TabOrder = 0
         object AddFilter_btn: TButton
           Left = 8
@@ -108,15 +119,19 @@ object ListForm: TListForm
           OnClick = DeleteAllFilters_btnClick
           TabOrder = 1
         end
-        object AcceptFilters_btn: TButton
+        object AcceptFilters_spdbtn: TSpeedButton
           Left = 136
           Height = 25
           Top = 8
           Width = 142
-          AutoSize = True
-          Caption = 'Применить фильтры'
+          AllowAllUp = True
+          Caption = 'Применить фильры'
+          Color = clSilver
+          Font.Color = clBackground
+          Layout = blGlyphTop
+          Spacing = 0
           OnClick = AcceptFilters_btnClick
-          TabOrder = 2
+          ParentFont = False
         end
       end
     end
@@ -137,5 +152,76 @@ object ListForm: TListForm
     DataSet = SQLQuery
     left = 400
     top = 64
+  end
+  object ImageList: TImageList
+    left = 256
+    top = 64
+    Bitmap = {
+      4C69020000001000000010000000000000000000000000000000000000000000
+      000000000000000000005F5E5E895C5B5B890000000000000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000005F5E5D89CFCDCCFFC6C4C3FF5958578900000000000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      00005C5B5B89BDBBB9FFA8A5A3FFA7A4A2FFADABA9FF51504F89000000000000
+      0000000000000000000000000000000000000000000000000000000000005A59
+      5989B5B2B0FFA8A5A3FFA6A3A1FFA5A2A0FFA6A3A1FFA5A2A0FF4F4E4D890000
+      000000000000000000000000000000000000000000000000000058575689B0AD
+      ACFFA8A5A3FFA6A3A1FFA4A19FFFA3A09EFFA3A09EFFA3A09EFFA3A09EFF4F4D
+      4D89000000000000000000000000000000000000000056555489ADABA9FFA8A5
+      A3FFA6A3A1FFA4A19FFFA29F9DFFA09D9BFFA19E9CFFA19E9CFFA19E9CFFA09D
+      9BFF4E4C4B8900000000000000000000000054535289ADAAA8FFA8A5A3FFA6A3
+      A1FFA4A19FFFA19E9CFF9D9A98FF9A9795FF999694FF9B9896FF9C9997FF9D9A
+      98FF9C9997FF4C4B4A8900000000494847899E9B99FF9F9C9BFF9E9B9AFFA6A3
+      A1FFA5A2A0FFA19E9CFF9C9997FF979492FF94918FFF918E8DFF908E8CFF8D8A
+      89FF908D8BFF908D8BFF45444489161616101616161016161610161616109F9C
+      9AFFA5A2A0FFA09D9BFF9B9896FF969391FF928F8DFF8E8B89FF858281FF1616
+      1610161616101616161016161610000000000000000000000000000000009F9C
+      9AFFA4A19FFF9F9C9AFF999694FF94918FFF908D8BFF8C8987FF827F7EFF0000
+      0000000000000000000000000000000000000000000000000000000000009F9C
+      9AFFA3A09EFF9E9B99FF989593FF93908EFF8E8B89FF898685FF807D7CFF0000
+      0000000000000000000000000000000000000000000000000000000000009E9C
+      9AFFA3A09EFF9D9A98FF979492FF918E8CFF8C8987FF878483FF7D7A79FF0000
+      0000000000000000000000000000000000000000000000000000000000009E9C
+      9AFFA29F9DFF9C9997FF969391FF908D8BFF8A8786FF848180FF7B7877FF0000
+      0000000000000000000000000000000000000000000000000000000000009E9B
+      9AFFA29F9DFF9B9896FF949190FF8E8B8AFF888584FF827F7EFF787574FF0000
+      0000000000000000000000000000000000000000000000000000000000009E9B
+      99FFA19E9CFF9A9795FF93908FFF8D8A88FF868382FF7F7D7BFF757272FF0000
+      0000000000000000000000000000000000000000000000000000000000009592
+      91FF989593FF918E8DFF8B8887FF858281FF7F7C7BFF787675FF6F6D6CFF0000
+      000000000000000000000000000000000000000000000000000000000000BBBA
+      B9FFC4C2C1FFB6B4B2FFAEACAAFFAAA7A6FFA5A3A1FFA5A2A1FF9A9796FF0000
+      000000000000000000000000000000000000000000000000000000000000C2C1
+      C0FFABA8A6FFAAA7A5FFAAA7A5FFA9A6A4FFA9A6A4FFA8A5A3FF9D9A99FF0000
+      000000000000000000000000000000000000000000000000000000000000B5B3
+      B2FFAAA7A5FFA9A6A4FFA9A6A4FFA8A5A3FFA7A4A2FFA5A2A0FF9A9896FF0000
+      000000000000000000000000000000000000000000000000000000000000AEAB
+      AAFFAAA7A5FFA9A6A4FFA7A4A2FFA6A3A1FFA4A19FFFA3A09EFF989593FF0000
+      000000000000000000000000000000000000000000000000000000000000A9A7
+      A5FFA9A6A4FFA7A4A2FFA6A3A1FFA4A19FFFA29F9DFFA09D9BFF959290FF0000
+      000000000000000000000000000000000000000000000000000000000000A5A3
+      A1FFA9A6A4FFA7A4A2FFA5A2A0FFA3A09EFFA09D9BFF9D9A98FF928F8EFF0000
+      000000000000000000000000000000000000000000000000000000000000A5A2
+      A1FFA8A5A3FFA6A3A1FFA3A09EFFA19E9CFF9E9B99FF9B9896FF908D8BFF0000
+      000000000000000000000000000000000000000000000000000000000000A3A0
+      9EFFA7A4A2FFA5A2A0FFA29F9DFFA09D9BFF9C9997FF989593FF8D8A88FF0000
+      0000000000000000000000000000494747899D9A98FF9E9B99FF9E9B99FFA6A3
+      A1FFA6A3A1FFA4A19FFFA19E9CFF9E9B99FF9A9795FF969391FF918E8CFF8785
+      83FF848180FF7F7D7BFF5250509700000000504E4E89A4A19FFFA3A09EFFA19E
+      9CFFA09D9BFFA09D9BFF9F9C9AFF9C9997FF979492FF93908EFF8F8C8AFF8A87
+      86FF83807FFF555352970505050200000000000000004F4E4D89A29F9DFFA09D
+      9BFF9D9A98FF9B9896FF999694FF979492FF93908EFF8F8C8AFF8A8785FF827F
+      7DFF5452529705050502000000000000000000000000000000004F4D4D899F9C
+      9AFF9D9A98FF999694FF979492FF94918FFF8F8C8BFF8A8786FF827F7EFF5452
+      5197050505020000000000000000000000000000000000000000000000004E4C
+      4B899C9997FF999694FF959290FF928F8DFF8C8988FF848180FF545252970505
+      0502000000000000000000000000000000000000000000000000000000000000
+      00004C4B4A89979492FF94918FFF8F8C8AFF878483FF55535397050505020000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000004A494889918E8DFF8C8987FF5655549705050502000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      0000000000000000000048474689585656970505050200000000000000000000
+      0000000000000000000000000000
+    }
   end
 end
