--- a/listview.lfm
+++ b/listview.lfm
@@ -1,12 +1,12 @@
 object ListForm: TListForm
-  Left = 454
-  Height = 595
-  Top = 214
-  Width = 849
-  ClientHeight = 595
-  ClientWidth = 849
-  Constraints.MinHeight = 406
-  Constraints.MinWidth = 447
+  Left = 677
+  Height = 598
+  Top = 247
+  Width = 629
+  ClientHeight = 598
+  ClientWidth = 629
+  Constraints.MinHeight = 422
+  Constraints.MinWidth = 568
   OnShow = FormShow
   LCLVersion = '1.2.4.0'
   object PairSplitter: TPairSplitter
@@ -18,9 +18,9 @@ object ListForm: TListForm
     AnchorSideBottom.Side = asrBottom
     Cursor = crVSplit
     Left = 0
-    Height = 595
+    Height = 598
     Top = 0
-    Width = 849
+    Width = 629
     Align = alCustom
     Anchors = [akTop, akLeft, akRight, akBottom]
     Position = 350
@@ -30,8 +30,8 @@ object ListForm: TListForm
       Left = 0
       Height = 350
       Top = 0
-      Width = 849
-      ClientWidth = 849
+      Width = 629
+      ClientWidth = 629
       ClientHeight = 350
       object DBGrid: TDBGrid
         AnchorSideLeft.Control = PairSplitterTop
@@ -44,7 +44,7 @@ object ListForm: TListForm
         Left = 0
         Height = 321
         Top = 29
-        Width = 849
+        Width = 629
         Anchors = [akTop, akLeft, akRight, akBottom]
         Color = clWindow
         Columns = <>
@@ -82,22 +82,22 @@ object ListForm: TListForm
     object PairSplitterBottom: TPairSplitterSide
       Cursor = crArrow
       Left = 0
-      Height = 240
+      Height = 243
       Top = 355
-      Width = 849
-      ClientWidth = 849
-      ClientHeight = 240
+      Width = 629
+      ClientWidth = 629
+      ClientHeight = 243
       object ScrollBox: TScrollBox
         Left = 0
-        Height = 240
+        Height = 243
         Top = 0
-        Width = 849
-        HorzScrollBar.Page = 840
-        VertScrollBar.Page = 33
+        Width = 629
+        HorzScrollBar.Page = 428
+        VertScrollBar.Page = 60
         VertScrollBar.Tracking = True
         Align = alClient
-        ClientHeight = 236
-        ClientWidth = 845
+        ClientHeight = 239
+        ClientWidth = 625
         TabOrder = 0
         object AddFilter_btn: TButton
           Left = 8
@@ -135,14 +135,36 @@ object ListForm: TListForm
           ParentFont = False
         end
         object CreateNew_btn: TButton
-          Left = 712
+          AnchorSideTop.Control = ScrollBox
+          AnchorSideRight.Control = ScrollBox
+          AnchorSideRight.Side = asrBottom
+          Left = 492
           Height = 25
-          Top = 8
+          Top = 5
           Width = 128
+          Anchors = [akTop, akRight]
           AutoSize = True
+          BorderSpacing.Top = 5
+          BorderSpacing.Right = 5
           Caption = 'Добавить Элемент'
           OnClick = CreateNew_btnClick
           TabOrder = 2
+        end
+        object DeleteField_btn: TButton
+          AnchorSideTop.Control = CreateNew_btn
+          AnchorSideTop.Side = asrBottom
+          AnchorSideRight.Control = ScrollBox
+          AnchorSideRight.Side = asrBottom
+          Left = 492
+          Height = 25
+          Top = 35
+          Width = 128
+          Anchors = [akTop, akRight]
+          BorderSpacing.Top = 5
+          BorderSpacing.Right = 5
+          Caption = 'Удалить Элемент'
+          OnClick = DeleteField_btnClick
+          TabOrder = 3
         end
       end
     end
