--- a/ueditcard.lfm
+++ b/ueditcard.lfm
@@ -1,21 +1,24 @@
 object EditCard: TEditCard
-  Left = 359
-  Height = 582
-  Top = 183
-  Width = 400
+  Left = 625
+  Height = 650
+  Top = 172
+  Width = 500
   Caption = 'EditCard'
-  ClientHeight = 582
-  ClientWidth = 400
-  Constraints.MaxWidth = 400
-  Constraints.MinWidth = 400
-  OnShow = FormCreate
+  ClientHeight = 650
+  ClientWidth = 500
+  Constraints.MaxHeight = 650
+  Constraints.MaxWidth = 500
+  Constraints.MinHeight = 400
+  Constraints.MinWidth = 500
+  OnClose = FormClose
+  OnShow = FormShow
   LCLVersion = '1.2.4.0'
   object Accept_btn: TButton
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
-    Left = 80
+    Left = 112
     Height = 25
-    Top = 532
+    Top = 600
     Width = 75
     Anchors = [akLeft, akBottom]
     BorderSpacing.Bottom = 25
@@ -26,9 +29,9 @@ object EditCard: TEditCard
   object Cancel_btn: TButton
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
-    Left = 240
+    Left = 312
     Height = 25
-    Top = 532
+    Top = 600
     Width = 75
     Anchors = [akLeft, akBottom]
     BorderSpacing.Bottom = 25
@@ -36,12 +39,12 @@ object EditCard: TEditCard
     OnClick = Cancel_btnClick
     TabOrder = 1
   end
-  object TempDataSource: TDataSource
-    DataSet = TempSQLQuery
+  object CardDataSource: TDataSource
+    DataSet = CardSQLQuery
     left = 48
     top = 48
   end
-  object TempSQLQuery: TSQLQuery
+  object CardSQLQuery: TSQLQuery
     FieldDefs = <>
     Database = DataBaseConnectionUnit.IBConnection
     Transaction = DataBaseConnectionUnit.SQLTransaction
